# serializer version: 1
# name: TestScenarioBaseLoadStrategy.test_snapshot_base_load_100w
  dict({
    'monthly': dict({
      1: dict({
        'battery': 0.66,
        'consumption': 215.45,
        'direct_pv': 9.37,
        'feed_in': 0.0,
        'grid_import': 205.42,
        'pv_generation': 11.89,
      }),
      2: dict({
        'battery': 18.08,
        'consumption': 194.6,
        'direct_pv': 15.47,
        'feed_in': 0.0,
        'grid_import': 161.05,
        'pv_generation': 40.39,
      }),
      3: dict({
        'battery': 48.4,
        'consumption': 215.45,
        'direct_pv': 22.2,
        'feed_in': 1.93,
        'grid_import': 144.84,
        'pv_generation': 91.8,
      }),
      4: dict({
        'battery': 51.76,
        'consumption': 208.5,
        'direct_pv': 32.33,
        'feed_in': 34.06,
        'grid_import': 124.4,
        'pv_generation': 137.88,
      }),
      5: dict({
        'battery': 52.85,
        'consumption': 215.45,
        'direct_pv': 40.53,
        'feed_in': 65.99,
        'grid_import': 122.07,
        'pv_generation': 181.75,
      }),
      6: dict({
        'battery': 50.87,
        'consumption': 208.5,
        'direct_pv': 39.96,
        'feed_in': 79.42,
        'grid_import': 117.67,
        'pv_generation': 192.77,
      }),
      7: dict({
        'battery': 52.72,
        'consumption': 215.45,
        'direct_pv': 41.14,
        'feed_in': 73.23,
        'grid_import': 121.59,
        'pv_generation': 189.87,
      }),
      8: dict({
        'battery': 53.27,
        'consumption': 215.45,
        'direct_pv': 35.52,
        'feed_in': 45.96,
        'grid_import': 126.66,
        'pv_generation': 155.79,
      }),
      9: dict({
        'battery': 52.32,
        'consumption': 208.5,
        'direct_pv': 26.27,
        'feed_in': 8.19,
        'grid_import': 129.92,
        'pv_generation': 103.69,
      }),
      10: dict({
        'battery': 30.78,
        'consumption': 215.45,
        'direct_pv': 18.26,
        'feed_in': 0.0,
        'grid_import': 166.4,
        'pv_generation': 56.65,
      }),
      11: dict({
        'battery': 3.24,
        'consumption': 208.5,
        'direct_pv': 11.81,
        'feed_in': 0.0,
        'grid_import': 193.45,
        'pv_generation': 17.28,
      }),
      12: dict({
        'battery': 0.0,
        'consumption': 215.45,
        'direct_pv': 1.31,
        'feed_in': 0.0,
        'grid_import': 214.14,
        'pv_generation': 1.39,
      }),
    }),
    'totals': dict({
      'curtailed': 0.0,
      'feed_in': 308.77,
      'full_cycles': 82.99,
      'grid_import': 1827.6,
      'total_consumption': 2536.75,
    }),
  })
# ---
# name: TestScenarioBaseLoadStrategy.test_snapshot_base_load_300w
  dict({
    'monthly': dict({
      1: dict({
        'battery': 0.0,
        'consumption': 215.45,
        'direct_pv': 11.2,
        'feed_in': 0.04,
        'grid_import': 204.25,
        'pv_generation': 11.89,
      }),
      2: dict({
        'battery': 3.12,
        'consumption': 194.6,
        'direct_pv': 28.39,
        'feed_in': 4.74,
        'grid_import': 163.09,
        'pv_generation': 40.39,
      }),
      3: dict({
        'battery': 30.12,
        'consumption': 215.45,
        'direct_pv': 38.08,
        'feed_in': 11.41,
        'grid_import': 147.25,
        'pv_generation': 91.8,
      }),
      4: dict({
        'battery': 57.92,
        'consumption': 208.5,
        'direct_pv': 41.28,
        'feed_in': 15.76,
        'grid_import': 109.3,
        'pv_generation': 137.88,
      }),
      5: dict({
        'battery': 73.12,
        'consumption': 215.45,
        'direct_pv': 45.44,
        'feed_in': 30.57,
        'grid_import': 96.89,
        'pv_generation': 181.75,
      }),
      6: dict({
        'battery': 77.19,
        'consumption': 208.5,
        'direct_pv': 44.83,
        'feed_in': 36.16,
        'grid_import': 86.48,
        'pv_generation': 192.77,
      }),
      7: dict({
        'battery': 76.4,
        'consumption': 215.45,
        'direct_pv': 45.86,
        'feed_in': 34.5,
        'grid_import': 93.19,
        'pv_generation': 189.87,
      }),
      8: dict({
        'battery': 65.56,
        'consumption': 215.45,
        'direct_pv': 43.72,
        'feed_in': 20.69,
        'grid_import': 106.17,
        'pv_generation': 155.79,
      }),
      9: dict({
        'battery': 38.7,
        'consumption': 208.5,
        'direct_pv': 38.24,
        'feed_in': 11.37,
        'grid_import': 131.57,
        'pv_generation': 103.69,
      }),
      10: dict({
        'battery': 9.27,
        'consumption': 215.45,
        'direct_pv': 33.7,
        'feed_in': 8.08,
        'grid_import': 172.48,
        'pv_generation': 56.65,
      }),
      11: dict({
        'battery': 0.0,
        'consumption': 208.5,
        'direct_pv': 15.96,
        'feed_in': 0.38,
        'grid_import': 192.54,
        'pv_generation': 17.28,
      }),
      12: dict({
        'battery': 0.0,
        'consumption': 215.45,
        'direct_pv': 1.31,
        'feed_in': 0.0,
        'grid_import': 214.14,
        'pv_generation': 1.39,
      }),
    }),
    'totals': dict({
      'curtailed': 0.0,
      'feed_in': 173.71,
      'full_cycles': 86.28,
      'grid_import': 1717.35,
      'total_consumption': 2536.75,
    }),
  })
# ---
# name: TestScenarioDcVsAcCoupling.test_snapshot_ac_coupled_results
  dict({
    'monthly': dict({
      1: dict({
        'battery': 0.0,
        'consumption': 215.45,
        'direct_pv': 11.2,
        'feed_in': 0.0,
        'grid_import': 204.25,
        'pv_generation': 11.89,
      }),
      2: dict({
        'battery': 5.93,
        'consumption': 194.6,
        'direct_pv': 28.85,
        'feed_in': 0.0,
        'grid_import': 159.82,
        'pv_generation': 40.39,
      }),
      3: dict({
        'battery': 35.29,
        'consumption': 215.45,
        'direct_pv': 39.12,
        'feed_in': 0.0,
        'grid_import': 141.03,
        'pv_generation': 91.8,
      }),
      4: dict({
        'battery': 64.74,
        'consumption': 208.5,
        'direct_pv': 42.65,
        'feed_in': 0.0,
        'grid_import': 101.11,
        'pv_generation': 137.88,
      }),
      5: dict({
        'battery': 92.81,
        'consumption': 215.45,
        'direct_pv': 46.4,
        'feed_in': 0.0,
        'grid_import': 76.25,
        'pv_generation': 181.75,
      }),
      6: dict({
        'battery': 101.49,
        'consumption': 208.5,
        'direct_pv': 45.21,
        'feed_in': 0.0,
        'grid_import': 61.8,
        'pv_generation': 192.77,
      }),
      7: dict({
        'battery': 98.74,
        'consumption': 215.45,
        'direct_pv': 46.56,
        'feed_in': 0.0,
        'grid_import': 70.15,
        'pv_generation': 189.87,
      }),
      8: dict({
        'battery': 75.58,
        'consumption': 215.45,
        'direct_pv': 45.11,
        'feed_in': 0.0,
        'grid_import': 94.75,
        'pv_generation': 155.79,
      }),
      9: dict({
        'battery': 43.06,
        'consumption': 208.5,
        'direct_pv': 39.4,
        'feed_in': 0.0,
        'grid_import': 126.04,
        'pv_generation': 103.69,
      }),
      10: dict({
        'battery': 13.65,
        'consumption': 215.45,
        'direct_pv': 34.67,
        'feed_in': 0.0,
        'grid_import': 167.13,
        'pv_generation': 56.65,
      }),
      11: dict({
        'battery': 0.0,
        'consumption': 208.5,
        'direct_pv': 15.96,
        'feed_in': 0.0,
        'grid_import': 192.54,
        'pv_generation': 17.28,
      }),
      12: dict({
        'battery': 0.0,
        'consumption': 215.45,
        'direct_pv': 1.31,
        'feed_in': 0.0,
        'grid_import': 214.14,
        'pv_generation': 1.39,
      }),
    }),
    'totals': dict({
      'curtailed': 0.0,
      'feed_in': 0.0,
      'full_cycles': 106.26,
      'grid_import': 1609.02,
      'total_consumption': 2536.75,
    }),
  })
# ---
# name: TestScenarioDcVsAcCoupling.test_snapshot_dc_coupled_results
  dict({
    'monthly': dict({
      1: dict({
        'battery': 0.0,
        'consumption': 215.45,
        'direct_pv': 11.2,
        'feed_in': 0.0,
        'grid_import': 204.25,
        'pv_generation': 11.89,
      }),
      2: dict({
        'battery': 6.74,
        'consumption': 194.6,
        'direct_pv': 28.85,
        'feed_in': 0.0,
        'grid_import': 159.01,
        'pv_generation': 40.39,
      }),
      3: dict({
        'battery': 39.01,
        'consumption': 215.45,
        'direct_pv': 39.12,
        'feed_in': 0.0,
        'grid_import': 137.32,
        'pv_generation': 91.8,
      }),
      4: dict({
        'battery': 71.01,
        'consumption': 208.5,
        'direct_pv': 42.65,
        'feed_in': 0.0,
        'grid_import': 94.84,
        'pv_generation': 137.88,
      }),
      5: dict({
        'battery': 101.12,
        'consumption': 215.45,
        'direct_pv': 46.4,
        'feed_in': 0.0,
        'grid_import': 67.94,
        'pv_generation': 181.75,
      }),
      6: dict({
        'battery': 110.84,
        'consumption': 208.5,
        'direct_pv': 45.21,
        'feed_in': 0.0,
        'grid_import': 52.45,
        'pv_generation': 192.77,
      }),
      7: dict({
        'battery': 108.18,
        'consumption': 215.45,
        'direct_pv': 46.56,
        'feed_in': 0.0,
        'grid_import': 60.71,
        'pv_generation': 189.87,
      }),
      8: dict({
        'battery': 82.73,
        'consumption': 215.45,
        'direct_pv': 45.11,
        'feed_in': 0.0,
        'grid_import': 87.61,
        'pv_generation': 155.79,
      }),
      9: dict({
        'battery': 47.46,
        'consumption': 208.5,
        'direct_pv': 39.4,
        'feed_in': 0.0,
        'grid_import': 121.64,
        'pv_generation': 103.69,
      }),
      10: dict({
        'battery': 15.29,
        'consumption': 215.45,
        'direct_pv': 34.67,
        'feed_in': 0.0,
        'grid_import': 165.5,
        'pv_generation': 56.65,
      }),
      11: dict({
        'battery': 0.0,
        'consumption': 208.5,
        'direct_pv': 15.96,
        'feed_in': 0.0,
        'grid_import': 192.54,
        'pv_generation': 17.28,
      }),
      12: dict({
        'battery': 0.0,
        'consumption': 215.45,
        'direct_pv': 1.31,
        'feed_in': 0.0,
        'grid_import': 214.14,
        'pv_generation': 1.39,
      }),
    }),
    'totals': dict({
      'curtailed': 0.0,
      'feed_in': 0.0,
      'full_cycles': 116.47,
      'grid_import': 1557.95,
      'total_consumption': 2536.75,
    }),
  })
# ---
# name: TestScenarioInverterLimit.test_snapshot_limited_inverter_results
  dict({
    'monthly': dict({
      1: dict({
        'battery': 0.0,
        'consumption': 74.4,
        'direct_pv': 9.37,
        'feed_in': 1.92,
        'grid_import': 65.03,
        'pv_generation': 11.89,
      }),
      2: dict({
        'battery': 0.0,
        'consumption': 67.2,
        'direct_pv': 15.47,
        'feed_in': 23.46,
        'grid_import': 51.73,
        'pv_generation': 40.39,
      }),
      3: dict({
        'battery': 0.0,
        'consumption': 74.4,
        'direct_pv': 20.08,
        'feed_in': 68.83,
        'grid_import': 54.32,
        'pv_generation': 91.8,
      }),
      4: dict({
        'battery': 0.0,
        'consumption': 72.0,
        'direct_pv': 20.24,
        'feed_in': 113.26,
        'grid_import': 51.76,
        'pv_generation': 137.88,
      }),
      5: dict({
        'battery': 0.0,
        'consumption': 74.4,
        'direct_pv': 21.55,
        'feed_in': 146.45,
        'grid_import': 52.85,
        'pv_generation': 181.75,
      }),
      6: dict({
        'battery': 0.0,
        'consumption': 72.0,
        'direct_pv': 21.13,
        'feed_in': 148.57,
        'grid_import': 50.87,
        'pv_generation': 192.77,
      }),
      7: dict({
        'battery': 0.0,
        'consumption': 74.4,
        'direct_pv': 21.68,
        'feed_in': 149.75,
        'grid_import': 52.72,
        'pv_generation': 189.87,
      }),
      8: dict({
        'battery': 0.0,
        'consumption': 74.4,
        'direct_pv': 21.13,
        'feed_in': 129.09,
        'grid_import': 53.27,
        'pv_generation': 155.79,
      }),
      9: dict({
        'battery': 0.0,
        'consumption': 72.0,
        'direct_pv': 19.68,
        'feed_in': 80.77,
        'grid_import': 52.32,
        'pv_generation': 103.69,
      }),
      10: dict({
        'battery': 0.0,
        'consumption': 74.4,
        'direct_pv': 18.26,
        'feed_in': 36.45,
        'grid_import': 56.14,
        'pv_generation': 56.65,
      }),
      11: dict({
        'battery': 0.0,
        'consumption': 72.0,
        'direct_pv': 11.81,
        'feed_in': 4.66,
        'grid_import': 60.19,
        'pv_generation': 17.28,
      }),
      12: dict({
        'battery': 0.0,
        'consumption': 74.4,
        'direct_pv': 1.31,
        'feed_in': 0.0,
        'grid_import': 73.09,
        'pv_generation': 1.39,
      }),
    }),
    'totals': dict({
      'curtailed': 39.18,
      'feed_in': 903.22,
      'full_cycles': 0.0,
      'grid_import': 674.29,
      'total_consumption': 876.0,
    }),
  })
# ---
# name: TestScenarioInverterLimit.test_snapshot_unlimited_inverter_results
  dict({
    'monthly': dict({
      1: dict({
        'battery': 0.0,
        'consumption': 74.4,
        'direct_pv': 9.37,
        'feed_in': 1.87,
        'grid_import': 65.03,
        'pv_generation': 11.89,
      }),
      2: dict({
        'battery': 0.0,
        'consumption': 67.2,
        'direct_pv': 15.47,
        'feed_in': 22.7,
        'grid_import': 51.73,
        'pv_generation': 40.39,
      }),
      3: dict({
        'battery': 0.0,
        'consumption': 74.4,
        'direct_pv': 20.08,
        'feed_in': 66.68,
        'grid_import': 54.32,
        'pv_generation': 91.8,
      }),
      4: dict({
        'battery': 0.0,
        'consumption': 72.0,
        'direct_pv': 20.24,
        'feed_in': 110.08,
        'grid_import': 51.76,
        'pv_generation': 137.88,
      }),
      5: dict({
        'battery': 0.0,
        'consumption': 74.4,
        'direct_pv': 21.55,
        'feed_in': 150.23,
        'grid_import': 52.85,
        'pv_generation': 181.75,
      }),
      6: dict({
        'battery': 0.0,
        'consumption': 72.0,
        'direct_pv': 21.13,
        'feed_in': 161.06,
        'grid_import': 50.87,
        'pv_generation': 192.77,
      }),
      7: dict({
        'battery': 0.0,
        'consumption': 74.4,
        'direct_pv': 21.68,
        'feed_in': 157.77,
        'grid_import': 52.72,
        'pv_generation': 189.87,
      }),
      8: dict({
        'battery': 0.0,
        'consumption': 74.4,
        'direct_pv': 21.13,
        'feed_in': 126.11,
        'grid_import': 53.27,
        'pv_generation': 155.79,
      }),
      9: dict({
        'battery': 0.0,
        'consumption': 72.0,
        'direct_pv': 19.68,
        'feed_in': 78.31,
        'grid_import': 52.32,
        'pv_generation': 103.69,
      }),
      10: dict({
        'battery': 0.0,
        'consumption': 74.4,
        'direct_pv': 18.26,
        'feed_in': 35.27,
        'grid_import': 56.14,
        'pv_generation': 56.65,
      }),
      11: dict({
        'battery': 0.0,
        'consumption': 72.0,
        'direct_pv': 11.81,
        'feed_in': 4.53,
        'grid_import': 60.19,
        'pv_generation': 17.28,
      }),
      12: dict({
        'battery': 0.0,
        'consumption': 74.4,
        'direct_pv': 1.31,
        'feed_in': 0.0,
        'grid_import': 73.09,
        'pv_generation': 1.39,
      }),
    }),
    'totals': dict({
      'curtailed': 0.0,
      'feed_in': 914.6,
      'full_cycles': 0.0,
      'grid_import': 674.29,
      'total_consumption': 876.0,
    }),
  })
# ---
# name: TestScenarioNoBattery.test_snapshot_no_battery_results
  dict({
    'monthly': dict({
      1: dict({
        'battery': 0.0,
        'consumption': 215.45,
        'direct_pv': 11.2,
        'feed_in': 0.04,
        'grid_import': 204.25,
        'pv_generation': 11.89,
      }),
      2: dict({
        'battery': 0.0,
        'consumption': 194.6,
        'direct_pv': 28.85,
        'feed_in': 9.32,
        'grid_import': 165.75,
        'pv_generation': 40.39,
      }),
      3: dict({
        'battery': 0.0,
        'consumption': 215.45,
        'direct_pv': 39.12,
        'feed_in': 47.63,
        'grid_import': 176.33,
        'pv_generation': 91.8,
      }),
      4: dict({
        'battery': 0.0,
        'consumption': 208.5,
        'direct_pv': 42.65,
        'feed_in': 87.67,
        'grid_import': 165.85,
        'pv_generation': 137.88,
      }),
      5: dict({
        'battery': 0.0,
        'consumption': 215.45,
        'direct_pv': 46.4,
        'feed_in': 125.38,
        'grid_import': 169.05,
        'pv_generation': 181.75,
      }),
      6: dict({
        'battery': 0.0,
        'consumption': 208.5,
        'direct_pv': 45.21,
        'feed_in': 136.98,
        'grid_import': 163.29,
        'pv_generation': 192.77,
      }),
      7: dict({
        'battery': 0.0,
        'consumption': 215.45,
        'direct_pv': 46.56,
        'feed_in': 132.88,
        'grid_import': 168.89,
        'pv_generation': 189.87,
      }),
      8: dict({
        'battery': 0.0,
        'consumption': 215.45,
        'direct_pv': 45.11,
        'feed_in': 102.13,
        'grid_import': 170.34,
        'pv_generation': 155.79,
      }),
      9: dict({
        'battery': 0.0,
        'consumption': 208.5,
        'direct_pv': 39.4,
        'feed_in': 58.59,
        'grid_import': 169.1,
        'pv_generation': 103.69,
      }),
      10: dict({
        'battery': 0.0,
        'consumption': 215.45,
        'direct_pv': 34.67,
        'feed_in': 18.87,
        'grid_import': 180.78,
        'pv_generation': 56.65,
      }),
      11: dict({
        'battery': 0.0,
        'consumption': 208.5,
        'direct_pv': 15.96,
        'feed_in': 0.38,
        'grid_import': 192.54,
        'pv_generation': 17.28,
      }),
      12: dict({
        'battery': 0.0,
        'consumption': 215.45,
        'direct_pv': 1.31,
        'feed_in': 0.0,
        'grid_import': 214.14,
        'pv_generation': 1.39,
      }),
    }),
    'totals': dict({
      'curtailed': 0.0,
      'feed_in': 719.87,
      'full_cycles': 0.0,
      'grid_import': 2140.31,
      'total_consumption': 2536.75,
    }),
  })
# ---
# name: TestScenarioSeasonalBehavior.test_snapshot_seasonal_results
  dict({
    'monthly': dict({
      1: dict({
        'battery': 0.0,
        'consumption': 215.45,
        'direct_pv': 11.2,
        'feed_in': 0.0,
        'grid_import': 204.25,
        'pv_generation': 11.89,
      }),
      2: dict({
        'battery': 6.74,
        'consumption': 194.6,
        'direct_pv': 28.85,
        'feed_in': 0.0,
        'grid_import': 159.01,
        'pv_generation': 40.39,
      }),
      3: dict({
        'battery': 39.01,
        'consumption': 215.45,
        'direct_pv': 39.12,
        'feed_in': 0.0,
        'grid_import': 137.32,
        'pv_generation': 91.8,
      }),
      4: dict({
        'battery': 71.01,
        'consumption': 208.5,
        'direct_pv': 42.65,
        'feed_in': 0.0,
        'grid_import': 94.84,
        'pv_generation': 137.88,
      }),
      5: dict({
        'battery': 101.12,
        'consumption': 215.45,
        'direct_pv': 46.4,
        'feed_in': 0.0,
        'grid_import': 67.94,
        'pv_generation': 181.75,
      }),
      6: dict({
        'battery': 110.84,
        'consumption': 208.5,
        'direct_pv': 45.21,
        'feed_in': 0.0,
        'grid_import': 52.45,
        'pv_generation': 192.77,
      }),
      7: dict({
        'battery': 108.18,
        'consumption': 215.45,
        'direct_pv': 46.56,
        'feed_in': 0.0,
        'grid_import': 60.71,
        'pv_generation': 189.87,
      }),
      8: dict({
        'battery': 82.73,
        'consumption': 215.45,
        'direct_pv': 45.11,
        'feed_in': 0.0,
        'grid_import': 87.61,
        'pv_generation': 155.79,
      }),
      9: dict({
        'battery': 47.46,
        'consumption': 208.5,
        'direct_pv': 39.4,
        'feed_in': 0.0,
        'grid_import': 121.64,
        'pv_generation': 103.69,
      }),
      10: dict({
        'battery': 15.29,
        'consumption': 215.45,
        'direct_pv': 34.67,
        'feed_in': 0.0,
        'grid_import': 165.5,
        'pv_generation': 56.65,
      }),
      11: dict({
        'battery': 0.0,
        'consumption': 208.5,
        'direct_pv': 15.96,
        'feed_in': 0.0,
        'grid_import': 192.54,
        'pv_generation': 17.28,
      }),
      12: dict({
        'battery': 0.0,
        'consumption': 215.45,
        'direct_pv': 1.31,
        'feed_in': 0.0,
        'grid_import': 214.14,
        'pv_generation': 1.39,
      }),
    }),
    'totals': dict({
      'curtailed': 0.0,
      'feed_in': 0.0,
      'full_cycles': 116.47,
      'grid_import': 1557.95,
      'total_consumption': 2536.75,
    }),
  })
# ---
# name: TestScenarioStrategyComparison.test_snapshot_strategy_base_load_200w
  dict({
    'monthly': dict({
      1: dict({
        'battery': 0.0,
        'consumption': 215.45,
        'direct_pv': 11.14,
        'feed_in': 0.03,
        'grid_import': 204.31,
        'pv_generation': 11.89,
      }),
      2: dict({
        'battery': 9.2,
        'consumption': 194.6,
        'direct_pv': 25.35,
        'feed_in': 0.46,
        'grid_import': 160.05,
        'pv_generation': 40.39,
      }),
      3: dict({
        'battery': 41.16,
        'consumption': 215.45,
        'direct_pv': 33.96,
        'feed_in': 1.8,
        'grid_import': 140.32,
        'pv_generation': 91.8,
      }),
      4: dict({
        'battery': 65.15,
        'consumption': 208.5,
        'direct_pv': 37.21,
        'feed_in': 9.26,
        'grid_import': 106.13,
        'pv_generation': 137.88,
      }),
      5: dict({
        'battery': 91.96,
        'consumption': 215.45,
        'direct_pv': 40.33,
        'feed_in': 14.02,
        'grid_import': 83.16,
        'pv_generation': 181.75,
      }),
      6: dict({
        'battery': 93.0,
        'consumption': 208.5,
        'direct_pv': 41.66,
        'feed_in': 22.93,
        'grid_import': 73.84,
        'pv_generation': 192.77,
      }),
      7: dict({
        'battery': 96.01,
        'consumption': 215.45,
        'direct_pv': 41.82,
        'feed_in': 16.85,
        'grid_import': 77.62,
        'pv_generation': 189.87,
      }),
      8: dict({
        'battery': 77.09,
        'consumption': 215.45,
        'direct_pv': 38.98,
        'feed_in': 11.8,
        'grid_import': 99.38,
        'pv_generation': 155.79,
      }),
      9: dict({
        'battery': 48.83,
        'consumption': 208.5,
        'direct_pv': 34.41,
        'feed_in': 3.48,
        'grid_import': 125.26,
        'pv_generation': 103.69,
      }),
      10: dict({
        'battery': 18.43,
        'consumption': 215.45,
        'direct_pv': 30.08,
        'feed_in': 0.66,
        'grid_import': 166.93,
        'pv_generation': 56.65,
      }),
      11: dict({
        'battery': 0.27,
        'consumption': 208.5,
        'direct_pv': 15.39,
        'feed_in': 0.08,
        'grid_import': 192.84,
        'pv_generation': 17.28,
      }),
      12: dict({
        'battery': 0.0,
        'consumption': 215.45,
        'direct_pv': 1.31,
        'feed_in': 0.0,
        'grid_import': 214.14,
        'pv_generation': 1.39,
      }),
    }),
    'totals': dict({
      'curtailed': 0.0,
      'feed_in': 81.38,
      'full_cycles': 108.22,
      'grid_import': 1643.99,
      'total_consumption': 2536.75,
    }),
  })
# ---
# name: TestScenarioStrategyComparison.test_snapshot_strategy_time_window_evening
  dict({
    'monthly': dict({
      1: dict({
        'battery': 8.21,
        'consumption': 215.45,
        'direct_pv': 0.01,
        'feed_in': 0.04,
        'grid_import': 207.23,
        'pv_generation': 11.89,
      }),
      2: dict({
        'battery': 25.72,
        'consumption': 194.6,
        'direct_pv': 2.74,
        'feed_in': 0.68,
        'grid_import': 166.14,
        'pv_generation': 40.39,
      }),
      3: dict({
        'battery': 30.73,
        'consumption': 215.45,
        'direct_pv': 23.37,
        'feed_in': 25.39,
        'grid_import': 161.34,
        'pv_generation': 91.8,
      }),
      4: dict({
        'battery': 29.71,
        'consumption': 208.5,
        'direct_pv': 28.76,
        'feed_in': 64.84,
        'grid_import': 150.04,
        'pv_generation': 137.88,
      }),
      5: dict({
        'battery': 30.67,
        'consumption': 215.45,
        'direct_pv': 31.05,
        'feed_in': 102.81,
        'grid_import': 153.73,
        'pv_generation': 181.75,
      }),
      6: dict({
        'battery': 29.67,
        'consumption': 208.5,
        'direct_pv': 32.03,
        'feed_in': 113.48,
        'grid_import': 146.8,
        'pv_generation': 192.77,
      }),
      7: dict({
        'battery': 30.66,
        'consumption': 215.45,
        'direct_pv': 31.64,
        'feed_in': 109.9,
        'grid_import': 153.15,
        'pv_generation': 189.87,
      }),
      8: dict({
        'battery': 30.69,
        'consumption': 215.45,
        'direct_pv': 30.23,
        'feed_in': 79.07,
        'grid_import': 154.53,
        'pv_generation': 155.79,
      }),
      9: dict({
        'battery': 29.73,
        'consumption': 208.5,
        'direct_pv': 25.81,
        'feed_in': 35.43,
        'grid_import': 152.96,
        'pv_generation': 103.69,
      }),
      10: dict({
        'battery': 30.76,
        'consumption': 215.45,
        'direct_pv': 11.05,
        'feed_in': 4.96,
        'grid_import': 173.64,
        'pv_generation': 56.65,
      }),
      11: dict({
        'battery': 15.15,
        'consumption': 208.5,
        'direct_pv': 0.01,
        'feed_in': 0.08,
        'grid_import': 193.34,
        'pv_generation': 17.28,
      }),
      12: dict({
        'battery': 1.06,
        'consumption': 215.45,
        'direct_pv': 0.0,
        'feed_in': 0.0,
        'grid_import': 214.38,
        'pv_generation': 1.39,
      }),
    }),
    'totals': dict({
      'curtailed': 0.0,
      'feed_in': 536.68,
      'full_cycles': 58.55,
      'grid_import': 2027.28,
      'total_consumption': 2536.75,
    }),
  })
# ---
# name: TestScenarioStrategyComparison.test_snapshot_strategy_zero_feed_in
  dict({
    'monthly': dict({
      1: dict({
        'battery': 0.0,
        'consumption': 215.45,
        'direct_pv': 11.2,
        'feed_in': 0.0,
        'grid_import': 204.25,
        'pv_generation': 11.89,
      }),
      2: dict({
        'battery': 6.74,
        'consumption': 194.6,
        'direct_pv': 28.85,
        'feed_in': 0.0,
        'grid_import': 159.01,
        'pv_generation': 40.39,
      }),
      3: dict({
        'battery': 39.01,
        'consumption': 215.45,
        'direct_pv': 39.12,
        'feed_in': 0.0,
        'grid_import': 137.32,
        'pv_generation': 91.8,
      }),
      4: dict({
        'battery': 71.01,
        'consumption': 208.5,
        'direct_pv': 42.65,
        'feed_in': 0.0,
        'grid_import': 94.84,
        'pv_generation': 137.88,
      }),
      5: dict({
        'battery': 101.12,
        'consumption': 215.45,
        'direct_pv': 46.4,
        'feed_in': 0.0,
        'grid_import': 67.94,
        'pv_generation': 181.75,
      }),
      6: dict({
        'battery': 110.84,
        'consumption': 208.5,
        'direct_pv': 45.21,
        'feed_in': 0.0,
        'grid_import': 52.45,
        'pv_generation': 192.77,
      }),
      7: dict({
        'battery': 108.18,
        'consumption': 215.45,
        'direct_pv': 46.56,
        'feed_in': 0.0,
        'grid_import': 60.71,
        'pv_generation': 189.87,
      }),
      8: dict({
        'battery': 82.73,
        'consumption': 215.45,
        'direct_pv': 45.11,
        'feed_in': 0.0,
        'grid_import': 87.61,
        'pv_generation': 155.79,
      }),
      9: dict({
        'battery': 47.46,
        'consumption': 208.5,
        'direct_pv': 39.4,
        'feed_in': 0.0,
        'grid_import': 121.64,
        'pv_generation': 103.69,
      }),
      10: dict({
        'battery': 15.29,
        'consumption': 215.45,
        'direct_pv': 34.67,
        'feed_in': 0.0,
        'grid_import': 165.5,
        'pv_generation': 56.65,
      }),
      11: dict({
        'battery': 0.0,
        'consumption': 208.5,
        'direct_pv': 15.96,
        'feed_in': 0.0,
        'grid_import': 192.54,
        'pv_generation': 17.28,
      }),
      12: dict({
        'battery': 0.0,
        'consumption': 215.45,
        'direct_pv': 1.31,
        'feed_in': 0.0,
        'grid_import': 214.14,
        'pv_generation': 1.39,
      }),
    }),
    'totals': dict({
      'curtailed': 0.0,
      'feed_in': 0.0,
      'full_cycles': 116.47,
      'grid_import': 1557.95,
      'total_consumption': 2536.75,
    }),
  })
# ---
# name: TestScenarioTimeWindowStrategy.test_snapshot_time_window_evening
  dict({
    'monthly': dict({
      1: dict({
        'battery': 8.02,
        'consumption': 215.45,
        'direct_pv': 0.01,
        'feed_in': 0.23,
        'grid_import': 207.42,
        'pv_generation': 11.89,
      }),
      2: dict({
        'battery': 29.58,
        'consumption': 194.6,
        'direct_pv': 0.03,
        'feed_in': 1.13,
        'grid_import': 164.99,
        'pv_generation': 40.39,
      }),
      3: dict({
        'battery': 44.34,
        'consumption': 215.45,
        'direct_pv': 14.42,
        'feed_in': 14.98,
        'grid_import': 156.69,
        'pv_generation': 91.8,
      }),
      4: dict({
        'battery': 42.88,
        'consumption': 208.5,
        'direct_pv': 26.84,
        'feed_in': 50.06,
        'grid_import': 138.78,
        'pv_generation': 137.88,
      }),
      5: dict({
        'battery': 44.28,
        'consumption': 215.45,
        'direct_pv': 30.87,
        'feed_in': 85.74,
        'grid_import': 140.3,
        'pv_generation': 181.75,
      }),
      6: dict({
        'battery': 42.84,
        'consumption': 208.5,
        'direct_pv': 30.03,
        'feed_in': 98.79,
        'grid_import': 135.63,
        'pv_generation': 192.77,
      }),
      7: dict({
        'battery': 44.28,
        'consumption': 215.45,
        'direct_pv': 30.96,
        'feed_in': 93.34,
        'grid_import': 140.22,
        'pv_generation': 189.87,
      }),
      8: dict({
        'battery': 44.3,
        'consumption': 215.45,
        'direct_pv': 30.01,
        'feed_in': 62.05,
        'grid_import': 141.14,
        'pv_generation': 155.79,
      }),
      9: dict({
        'battery': 42.9,
        'consumption': 208.5,
        'direct_pv': 19.47,
        'feed_in': 25.09,
        'grid_import': 146.13,
        'pv_generation': 103.69,
      }),
      10: dict({
        'battery': 40.65,
        'consumption': 215.45,
        'direct_pv': 3.34,
        'feed_in': 2.45,
        'grid_import': 171.46,
        'pv_generation': 56.65,
      }),
      11: dict({
        'battery': 12.43,
        'consumption': 208.5,
        'direct_pv': 0.01,
        'feed_in': 0.36,
        'grid_import': 196.06,
        'pv_generation': 17.28,
      }),
      12: dict({
        'battery': 1.06,
        'consumption': 215.45,
        'direct_pv': 0.0,
        'feed_in': 0.0,
        'grid_import': 214.38,
        'pv_generation': 1.39,
      }),
    }),
    'totals': dict({
      'curtailed': 0.0,
      'feed_in': 434.23,
      'full_cycles': 79.52,
      'grid_import': 1953.19,
      'total_consumption': 2536.75,
    }),
  })
# ---
# name: TestScenarioWithBattery.test_snapshot_large_battery_results
  dict({
    'monthly': dict({
      1: dict({
        'battery': 0.0,
        'consumption': 215.45,
        'direct_pv': 11.2,
        'feed_in': 0.0,
        'grid_import': 204.25,
        'pv_generation': 11.89,
      }),
      2: dict({
        'battery': 5.89,
        'consumption': 194.6,
        'direct_pv': 28.85,
        'feed_in': 0.0,
        'grid_import': 159.86,
        'pv_generation': 40.39,
      }),
      3: dict({
        'battery': 39.43,
        'consumption': 215.45,
        'direct_pv': 39.12,
        'feed_in': 0.0,
        'grid_import': 136.89,
        'pv_generation': 91.8,
      }),
      4: dict({
        'battery': 71.01,
        'consumption': 208.5,
        'direct_pv': 42.65,
        'feed_in': 0.0,
        'grid_import': 94.84,
        'pv_generation': 137.88,
      }),
      5: dict({
        'battery': 101.12,
        'consumption': 215.45,
        'direct_pv': 46.4,
        'feed_in': 0.0,
        'grid_import': 67.94,
        'pv_generation': 181.75,
      }),
      6: dict({
        'battery': 110.84,
        'consumption': 208.5,
        'direct_pv': 45.21,
        'feed_in': 0.0,
        'grid_import': 52.45,
        'pv_generation': 192.77,
      }),
      7: dict({
        'battery': 108.18,
        'consumption': 215.45,
        'direct_pv': 46.56,
        'feed_in': 0.0,
        'grid_import': 60.71,
        'pv_generation': 189.87,
      }),
      8: dict({
        'battery': 82.73,
        'consumption': 215.45,
        'direct_pv': 45.11,
        'feed_in': 0.0,
        'grid_import': 87.61,
        'pv_generation': 155.79,
      }),
      9: dict({
        'battery': 47.46,
        'consumption': 208.5,
        'direct_pv': 39.4,
        'feed_in': 0.0,
        'grid_import': 121.64,
        'pv_generation': 103.69,
      }),
      10: dict({
        'battery': 15.29,
        'consumption': 215.45,
        'direct_pv': 34.67,
        'feed_in': 0.0,
        'grid_import': 165.5,
        'pv_generation': 56.65,
      }),
      11: dict({
        'battery': 0.0,
        'consumption': 208.5,
        'direct_pv': 15.96,
        'feed_in': 0.0,
        'grid_import': 192.54,
        'pv_generation': 17.28,
      }),
      12: dict({
        'battery': 0.0,
        'consumption': 215.45,
        'direct_pv': 1.31,
        'feed_in': 0.0,
        'grid_import': 214.14,
        'pv_generation': 1.39,
      }),
    }),
    'totals': dict({
      'curtailed': 0.0,
      'feed_in': 0.0,
      'full_cycles': 58.19,
      'grid_import': 1558.37,
      'total_consumption': 2536.75,
    }),
  })
# ---
# name: TestScenarioWithBattery.test_snapshot_small_battery_results
  dict({
    'monthly': dict({
      1: dict({
        'battery': 0.0,
        'consumption': 215.45,
        'direct_pv': 11.2,
        'feed_in': 0.0,
        'grid_import': 204.25,
        'pv_generation': 11.89,
      }),
      2: dict({
        'battery': 7.08,
        'consumption': 194.6,
        'direct_pv': 28.85,
        'feed_in': 0.0,
        'grid_import': 158.67,
        'pv_generation': 40.39,
      }),
      3: dict({
        'battery': 38.84,
        'consumption': 215.45,
        'direct_pv': 39.12,
        'feed_in': 0.0,
        'grid_import': 137.49,
        'pv_generation': 91.8,
      }),
      4: dict({
        'battery': 67.45,
        'consumption': 208.5,
        'direct_pv': 42.65,
        'feed_in': 4.39,
        'grid_import': 98.4,
        'pv_generation': 137.88,
      }),
      5: dict({
        'battery': 74.93,
        'consumption': 215.45,
        'direct_pv': 46.4,
        'feed_in': 32.87,
        'grid_import': 94.12,
        'pv_generation': 181.75,
      }),
      6: dict({
        'battery': 72.62,
        'consumption': 208.5,
        'direct_pv': 45.21,
        'feed_in': 47.32,
        'grid_import': 90.67,
        'pv_generation': 192.77,
      }),
      7: dict({
        'battery': 75.04,
        'consumption': 215.45,
        'direct_pv': 46.56,
        'feed_in': 40.24,
        'grid_import': 93.84,
        'pv_generation': 189.87,
      }),
      8: dict({
        'battery': 73.46,
        'consumption': 215.45,
        'direct_pv': 45.11,
        'feed_in': 11.44,
        'grid_import': 96.88,
        'pv_generation': 155.79,
      }),
      9: dict({
        'battery': 47.46,
        'consumption': 208.5,
        'direct_pv': 39.4,
        'feed_in': 0.0,
        'grid_import': 121.64,
        'pv_generation': 103.69,
      }),
      10: dict({
        'battery': 15.29,
        'consumption': 215.45,
        'direct_pv': 34.67,
        'feed_in': 0.0,
        'grid_import': 165.5,
        'pv_generation': 56.65,
      }),
      11: dict({
        'battery': 0.05,
        'consumption': 208.5,
        'direct_pv': 15.96,
        'feed_in': 0.0,
        'grid_import': 192.49,
        'pv_generation': 17.28,
      }),
      12: dict({
        'battery': 0.0,
        'consumption': 215.45,
        'direct_pv': 1.31,
        'feed_in': 0.0,
        'grid_import': 214.14,
        'pv_generation': 1.39,
      }),
    }),
    'totals': dict({
      'curtailed': 0.0,
      'feed_in': 136.26,
      'full_cycles': 157.4,
      'grid_import': 1668.09,
      'total_consumption': 2536.75,
    }),
  })
# ---
